--- a/src/app/components/our-team/our-team.component.html
+++ b/src/app/components/our-team/our-team.component.html
@@ -5,9 +5,9 @@
 <div class="container">
 <div class="row">
   <div class="col-sm-6">
-    <h2>"THERE IS ALWAYS A<span class="highlight"> BETTER</span> WAY TO DO IT </h2>
-    <h2>BUT WE HAVE TO <span class="highlight">FIND</span> IT"</h2>
-   <p>- Thomas Alva Edison</p>
+    <h2>"There's always a<span class="highlight"> better</span> way to do it - </h2>
+    <h2>- and we <span class="highlight">find</span> it"</h2>
+   <p>- originally said by Thomas Alva Edison</p>
   </div>
   <div class="col-sm-1"></div>
   <div class="col-sm-5">
@@ -19,9 +19,9 @@
       </h6>
       <h6>Transform and invoke design thinking though process
         and innovation to school and college students which
-        helps us to build a better environment</h6>
+        helps us to build a better environment.</h6>
         <div class="build-next-product-body">
-          <a class="btn btn-primary enquire" routerLink="/contact-us"><span>Join our Team</span></a>
+          <a class="btn btn-primary enquire" routerLink="/contact-us"><span>Join the clan</span></a>
       </div>
   </div>
 </div>
