--- a/src/app/components/services/back-end-development/back-end-development.component.html
+++ b/src/app/components/services/back-end-development/back-end-development.component.html
@@ -47,8 +47,8 @@
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6">
-        <p>It’ll aid us to understand your objectives. We need to get to the bottom
-          of who you are, what you stand for and who you stand besid</p>
+        <p>Designing scalable platform harnessing the technology for business reach to their end users with the better user 
+          experience, engagement and adaptablity.</p>
       </div>
       <div class="col-md-3"></div>
     </div>
@@ -75,8 +75,7 @@
   <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <span class="highlight1">UNDERSTANDING THE </span>
-        <h5>SYSTEM</h5>
+        <h5>Understanding the System</h5>
         <p>We draw the System Roadmap based on the Design Strategy for a better Usability. In this approach we have a clear roadmap that encompasses multiple factors like Defined User Base, quantum & type of data. 
           This set-up allows the well defined ecosystem to boost the performance, enhance scalability to alignment with the Product Vision, also get started with minimal fuss.
       </p>
@@ -95,7 +94,7 @@
   <div class="container">
       <div class="row">
         <div class="col-md-12">
-        <h5>TECH STACK</h5>
+        <h5>Tech Stack</h5>
         <p>We choose the right Tech Stack based on the detailed Analysis of User Behaviour and the Business needs in terms of, ease of use scalability interoperability with standardization adaptability with emerging trends integration with array of UI platforms (Responsive, Android, iOS & Wearables)</p>
         </div>
       </div>
@@ -139,7 +138,7 @@
   <div class="container">
       <div class="row">
         <div class="col-md-5 m-first">
-         <h5>IMPLEMENTATION</h5>
+         <h5>Implementation</h5>
           <p>We define the stubs in correlation with the Interface needs with scope for future enhancements with minimal changes. The API driven development allows us to integrate with multiple platforms and services in agile mode.
              We manage the code via Git repositories for a hassle free hand-over and deployment. 
           </p>
@@ -153,7 +152,7 @@
       </div>
       <div class="row">
         <div class="col-md-5 m-first">
-          <h5>TESTING & SUPPORT</h5>
+          <h5>Testing & Support</h5>
           <p>Quality is the key for any product success, with a well-defined quality process we delivery the product or application that are ready for go-live.</p>
           <p>With the core implementation done there is always scope for changes and customer exprience enhancements for which we work along with your team in Release/Patch Managment to suite the end-user demand.</p>
       </div>
@@ -169,7 +168,7 @@
 
 <div class="service-step4">
   <div class="step-heading">
-    <h4>OUR  SOLUTIONS  ARE  HELPING  AUDIENCE</h4>
+    <h4>Our  Solutions  Are  Helping  Audience</h4>
     <!-- <div class="step-image">
       <img src="/assets/images/sample/line.svg" />
     </div> -->
@@ -185,10 +184,10 @@
          </div>
          <div class="col-md-8">
            <div class="text">
-             <h5>WEB DEVELOPMENT</h5>
+             <h5>Web Development</h5>
             <p>The portal was designed for a conglomerate with Global Operations to showcase their portfolio of works; the portal with rich UI for statistical and graphical representation used predominantly by Sales Team for proposal initiative.
             The portal demands for an aesthetic interface with a robust end-to-end framework to hold the statistical information.</p>
-          <a routerLink="/projects/web-development"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
+          <a routerLink="/projects/web-development"><h3>View Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
          </div>
         </div>
         </div>
@@ -200,7 +199,7 @@
 <div class="services">
   <div class="container">
       <div class="services-heading">
-          <h5>OTHER SERVICES</h5>
+          <h5>Other Services</h5>
       </div>
       <div class="service-body">
           <div class="row">
@@ -209,7 +208,7 @@
                   <div class="service-icon">
                     <img src="/assets/images/home/usability-testing.svg" alt="Usablity Testing"/>
                   </div>
-                  <h4>USABILITY TESTING</h4>
+                  <h4>Usability Testing</h4>
                   <p>By means of Usability Testing techniques we valuate the product or website’s user experience even before it is built or it hits the market to assess and iterate the design to reduce cost and enhance end user’s experience</p>
                   <a class="btn">Show More</a>
                 </div>
@@ -219,7 +218,7 @@
               <div class="service-icon">
                 <img src="/assets/images/home/interface-design.svg" alt="Interface Design"/>
               </div>
-              <h4>INTERFACE DESIGN</h4>
+              <h4>Interface Design</h4>
               <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI.</p>
               <a class="btn">Show More</a>
           </div>
@@ -229,7 +228,7 @@
                   <div class="service-icon">
                       <img src="/assets/images/home/user-experience.svg" alt="User Experience"/>
                   </div>
-                  <h4>USER EXPERIENCE</h4>
+                  <h4>User Experience</h4>
                   <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
                   <a class="btn">Show More</a>
                 </div>
