--- a/src/app/components/services/usability-testing/usability-testing.component.html
+++ b/src/app/components/services/usability-testing/usability-testing.component.html
@@ -165,6 +165,8 @@
           <img src="/assets/images/services/usability-testing/img-6.svg" />
         </div>
         <div class="col-md-10">
+          <h3>Task Planning</h3>
+          <p>The scenarios for testing are planned along with the environment and the resultant parameters</p>
           <h3>Prepare Tasks</h3>
           <p>We choose the right framework to suite</p>
           <h3>Recuit The Users</h3>
@@ -389,10 +391,10 @@
 
 <div class="service-step9">
   <div class="step-heading">
-    <h4>OUR  SOLUTIONS  ARE  HELPING  AUDIENCE</h4>
-    <!-- <div class="step-image">
+    <h4>Our  Solutions  Are  Helping  Audience</h4>
+    <div class="step-image">
       <img src="/assets/images/sample/line.svg" />
-    </div> -->
+    </div>
 </div>
     <div class="case-study">
     <div class="body">
@@ -420,7 +422,7 @@
 <div class="services">
   <div class="container">
       <div class="services-heading">
-          <h5>OTHER SERVICES</h5>
+        <h5>Other Services</h5>
       </div>
       <div class="service-body">
           <div class="row">
