--- a/src/app/components/services/ux-consulting/ux-consulting.component.html
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.html
@@ -68,7 +68,7 @@
           </div>
           <div class="row">
               <div class="col-md-5">
-                  <h5>Stakeholder Business Discussion</h5>
+                  <h5>Stakeholder Discussion</h5>
                   <p>We start our requirements gathering from the pillars of the business; the Product Owners, Business SME, 
                       CEO/CTO to get their perspectives, needs & current process issues that they encounter and the potential areas of improvement. 
                     Based on the inputs we define the features and the scope.</p>
@@ -77,7 +77,7 @@
                             <img src="/assets/images/services/icons/line.svg" />
                         </div>
                         <div class="col-sm-8">
-                            <h6><span> Stakeholder Interview</span></h6>
+                            <h6><span> Kick-off Meeting</span></h6>
                             <h6><span> Business Requirement Gathering</span></h6>
                             <h6><span> Competitor Analysis</span></h6>
                             <h6><span> Affinity Mapping</span></h6>
@@ -264,9 +264,9 @@
                     </div>
                     <div class="col-sm-8">
                         <h6><span> Web Analytics</span></h6>
-                        <h6><span> High Fidelity Wireframe</span></h6>
-                        <h6><span> Clickable Prototyping</span></h6>
-                        <h6><span> Iteration</span></h6>
+                        <h6><span> Conversion Funnel</span></h6>
+                        <h6><span> Customer Feedback</span></h6>
+                        <h6><span> Sprint Iteration</span></h6>
                     </div>
                 </div>
         </div>
@@ -344,9 +344,9 @@
             </div>
             <div class="col-md-8">
                 <div class="text">
-                <h5>EVENT MANAGEMENT</h5>
+                <h5>Event Management</h5>
                 <p>The event management portal builds a network of people from the comfort of their home and enables to find venues and services for their Big Day! </p>
-                <a routerLink="/projects/event-management"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
+                <a routerLink="/projects/event-management"><h3>View Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
                 </div>
             </div>
         </div>
@@ -368,7 +368,7 @@
                         <div class="service-icon">
                           <img src="/assets/images/home/ui-dev.svg" alt="UI Development" /> 
                         </div>
-                        <h4>UI DEVELOPMENT</h4>
+                        <h4>UI Development</h4>
                         <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
                           execute it pixel perfect.</p>
                         <a class="btn">Show More</a>
@@ -379,7 +379,7 @@
                         <div class="service-icon">
                           <img src="/assets/images/home/end-to-end.svg" alt="End-to-End Development"/>
                         </div>
-                        <h4>END TO END DEVELOPMENT</h4>
+                        <h4>End-to-End Development</h4>
                         <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
                         <a class="btn">Show More</a>
                       </div>
@@ -389,7 +389,7 @@
                       <div class="service-icon">
                         <img src="/assets/images/home/interface-design.svg" alt="Interface Design"/>
                       </div>
-                      <h4>INTERFACE DESIGN</h4>
+                      <h4>Interface Design</h4>
                       <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
                       <a class="btn">Show More</a>
                   </div>
