--- a/src/app/components/services/visual-design/visual-design.component.html
+++ b/src/app/components/services/visual-design/visual-design.component.html
@@ -56,15 +56,15 @@
         <div class="col-md-6">
           <h1>Interface Design</h1>
           <div class="step-image"></div>
-          <p>It’ll aid us to understand your objectives. We need to get to the bottom
-            of who you are, what you stand for and who you stand besid</p>
+          <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your 
+              website come alive with best UI.</p>
         </div>
         <div class="col-md-3"></div>
       </div>
       <div class="row list-icons">
         <div class="col-md-2">
             <img src="/assets/images/services/interface-design/icon-1.svg" alt="" />
-            <p>Mood Board</p>
+            <p>Moodboard</p>
         </div>
         <div class="col-md-2">
             <img src="/assets/images/services/interface-design/icon-2.svg" alt="" />
@@ -98,7 +98,7 @@
     <div class="container">
         <div class="row">
         <div class="col-md-12">
-            <h5>Mood Board</h5>
+            <h5>Moodboard</h5>
         </div>
         </div>
         <div class="row">
@@ -107,7 +107,7 @@
             </div>
             <div class="col-md-1"></div>
             <div class="col-md-5">
-                <p>Mood Board - a visual representation put across the table to convey or emote the Product ideas and build the theme for the application or product.</p>
+                <p>Moodboard - a visual representation put across the table to convey or emote the Product ideas and build the theme for the application or product.</p>
             </div>
         </div>
         <div class="row">
@@ -316,7 +316,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-            <h5>Setup <span class="highlight">Style Guide</span></h5>
+            <h5>Create <span class="highlight">Style Guide</span></h5>
         </div>
         </div>
         <div class="row">
@@ -468,9 +468,9 @@
             </div>
             <div class="col-md-8">
                 <div class="text">
-                <h5>UX AHEAD STARTUP WEBSITE</h5>
+                <h5>UXAhead Start-up Website</h5>
                 <p>Portal for business to for Recruitment and Consulting - showcasing their services and portfolio of works.</p>
-                <a routerLink="/projects/marketing"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
+                <a routerLink="/projects/marketing"><h3>View Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
                 </div>
             </div>
         </div>
@@ -492,7 +492,7 @@
                       <div class="service-icon">
                           <img src="/assets/images/home/user-experience.svg" alt="User Experience"/>
                       </div>
-                      <h4>USER EXPERIENCE</h4>
+                      <h4>User Experience</h4>
                       <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
                       <a class="btn">Show More</a>
                     </div>
@@ -503,7 +503,7 @@
                         <div class="service-icon">
                           <img src="/assets/images/home/ui-dev.svg" alt="UI Development" /> 
                         </div>
-                        <h4>UI DEVELOPMENT</h4>
+                        <h4>UI Development</h4>
                         <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
                           execute it pixel perfect</p>
                         <a class="btn">Show More</a>
@@ -515,7 +515,7 @@
                         <div class="service-icon">
                           <img src="/assets/images/home/end-to-end.svg" alt="End-to-End Development"/>
                         </div>
-                        <h4>END TO END DEVELOPMENT</h4>
+                        <h4>End-to-End Development</h4>
                         <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
                         <a class="btn">Show More</a>
                       </div>
