--- a/src/app/components/cater/cater.component.html
+++ b/src/app/components/cater/cater.component.html
@@ -120,7 +120,7 @@
                   </div>
             </div>
             <div class="buttn">
-                  <div class="btn">View Case Study</div>
+                  <div class="btn" routerLink="/projects/app-development">View Case Study</div>
             </div>
       </div>
 </section>
